// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead items should render typeahead items with match 1`] = `
<div
  style={Object {}}
>
  <div
    className={undefined}
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      style={Object {}}
      type="text"
      value="le"
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      style={Object {}}
    >
      <div
        style={Object {}}
      >
        <div
          style={Object {}}
        >
          <div
            className={undefined}
          >
            <i
              aria-hidden="true"
              className="fa fa-filter"
              focusable="false"
              title="icon"
            />
            <span
              className={undefined}
            >
              mobile Fish
            </span>
          </div>
        </div>
        <ul
          role="listbox"
          style={Object {}}
        >
          <li
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className={undefined}
              title="Home Loan Account Table Computer"
            >
              <span
                className={undefined}
              >
                <span>
                  Home Loan Account Tab
                  <em
                    className={undefined}
                  >
                    le
                  </em>
                   Computer
                </span>
              </span>
              <p
                className={undefined}
              >
                <span>
                  Inventore praesentium et suscipit animi qui impedit et voluptatem inventore.
                </span>
              </p>
            </div>
          </li>
          <li
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className={undefined}
              title="transmitter Implementation Electronics"
            >
              <span
                className={undefined}
              >
                <span>
                  transmitter Imp
                  <em
                    className={undefined}
                  >
                    le
                  </em>
                  mentation E
                  <em
                    className={undefined}
                  >
                    le
                  </em>
                  ctronics
                </span>
              </span>
              <p
                className={undefined}
              >
                <span>
                  Asperiores sit et corporis laborum cupiditate consequatur et voluptatem nostrum.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        style={Object {}}
      >
        <div
          style={Object {}}
        >
          <div
            className={undefined}
          >
            <i
              aria-hidden="true"
              className="fa fa-asterisk"
              focusable="false"
              title="icon"
            />
            <span
              className={undefined}
            >
              Investment Account Steel
            </span>
          </div>
        </div>
        <ul
          role="listbox"
          style={Object {}}
        >
          <li
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className={undefined}
              title="Coordinator"
            >
              <span
                className={undefined}
              >
                <span>
                  Coordinator
                </span>
              </span>
              <p
                className={undefined}
              >
                <span>
                  Incidunt blanditiis sunt repel
                  <em
                    className={undefined}
                  >
                    le
                  </em>
                  ndus et velit eum sint voluptatibus deserunt.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with object items 1`] = `
<div
  style={Object {}}
>
  <div
    className={undefined}
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      style={Object {}}
    >
      <div
        style={Object {}}
      >
        <div
          style={Object {}}
        >
          <div
            className={undefined}
          >
            <i
              aria-hidden="true"
              className="fa fa-filter"
              focusable="false"
              title="icon"
            />
            <span
              className={undefined}
            >
              mobile Fish
            </span>
          </div>
        </div>
        <ul
          role="listbox"
          style={Object {}}
        >
          <li
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className={undefined}
              title="Home Loan Account Table Computer"
            >
              <span
                className={undefined}
              >
                <span>
                  Home Loan Account Table Computer
                </span>
              </span>
              <p
                className={undefined}
              >
                <span>
                  Inventore praesentium et suscipit animi qui impedit et voluptatem inventore.
                </span>
              </p>
            </div>
          </li>
          <li
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className={undefined}
              title="transmitter Implementation Electronics"
            >
              <span
                className={undefined}
              >
                <span>
                  transmitter Implementation Electronics
                </span>
              </span>
              <p
                className={undefined}
              >
                <span>
                  Asperiores sit et corporis laborum cupiditate consequatur et voluptatem nostrum.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        style={Object {}}
      >
        <div
          style={Object {}}
        >
          <div
            className={undefined}
          >
            <i
              aria-hidden="true"
              className="fa fa-asterisk"
              focusable="false"
              title="icon"
            />
            <span
              className={undefined}
            >
              Investment Account Steel
            </span>
          </div>
        </div>
        <ul
          role="listbox"
          style={Object {}}
        >
          <li
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={undefined}
            role="option"
            style={Object {}}
          >
            <div
              className={undefined}
              title="Coordinator"
            >
              <span
                className={undefined}
              >
                <span>
                  Coordinator
                </span>
              </span>
              <p
                className={undefined}
              >
                <span>
                  Incidunt blanditiis sunt repellendus et velit eum sint voluptatibus deserunt.
                </span>
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with string items 1`] = `
<div
  style={Object {}}
>
  <div
    className={undefined}
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      style={Object {}}
    >
      <ul
        role="listbox"
        style={Object {}}
      >
        <li
          id="react-autowhatever-my-search--item-0"
          onMouseDown={undefined}
          role="option"
          style={Object {}}
        >
          <div
            className={undefined}
            title="category 1"
          >
            <span
              className={undefined}
            >
              <span>
                category 1
              </span>
            </span>
          </div>
        </li>
        <li
          id="react-autowhatever-my-search--item-1"
          onMouseDown={undefined}
          role="option"
          style={Object {}}
        >
          <div
            className={undefined}
            title="category 2"
          >
            <span
              className={undefined}
            >
              <span>
                category 2
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead without items 1`] = `
<div
  style={Object {}}
>
  <div
    className={undefined}
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      className="undefined undefined"
      style={Object {}}
    >
      <span
        className="no-result"
      >
        No result.
      </span>
    </div>
  </div>
</div>
`;

exports[`Typeahead position should render search bar on the right 1`] = `
<div
  style={Object {}}
>
  <div
    className={undefined}
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={true}
      className="form-control"
      disabled={false}
      id="react-autowhatever-my-search-input"
      onBlur={undefined}
      onChange={undefined}
      onFocus={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      readOnly={false}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined}
    />
  </div>
  <div
    id="react-autowhatever-my-search"
  >
    <div
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Typeahead with toggle should render button 1`] = `
<button
  className="btn btn-link"
  disabled={false}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <i
    aria-hidden="true"
    className="fa fa-search"
    focusable="false"
    title={null}
  />
</button>
`;
